# ITMO_HOMEWORKS

./: .gitignore  README.md
1course/C++ homeworks/BigInteger(template version)/: BigInteger.cpp  BigInteger.h  main.cpp
1course/Paradigms/ArrayQueue/src/queue/: MyArrayQueueModuleTest.java
1course/Paradigms/Expression/src/expression/: AbstractExpression.java  BaseTest.java  BinaryExpression.java  Block.java  Divide.java  Not.java  Subtract.java  UnaryExpression.java  Variable.java
1course/Paradigms/MD5/src/: SHA256Sum.java
1course/Programming_intro/Mark/src/: markup.rar
1course/Programming_intro/Reverse/: Reverse.java  ReverseTrans.java  ReverseTranspose(0).java  ReverseTranspose.java
1course/Programming_intro/ReverseFast/: ReverseMin.java  ReverseTranspose.java
1course/Programming_intro/Sum/: SumDouble.java
1course/Programming_intro/SumFile/: SumFile.java  SumHex.java  SumHexFile.java  SumWTF.java
1course/Programming_intro/WordStat/: WordStat q.java  WordStatLineIndex (1).java  WordStatLineIndex.java  WordStatWords.java
2course/C++ Homeworks/: HW3.tar.xz
2course/C++ Homeworks/HW1/: CMakeLists.txt  main.cpp
2course/C++ Homeworks/HW10/: CMakeLists.txt
2course/C++ Homeworks/HW10/algorithm/: Algorithm.hpp  ConsequentPartitionAlgorithm.cpp  ConsequentPartitionAlgorithm.h  LongitudeSortPartition.cpp  LongitudeSortPartition.h  PathPartitionAlgorithm.h  RandomPartitionAlgorithm.cpp  RandomPartitionAlgorithm.h
2course/C++ Homeworks/HW10/common/: utilities.cpp  utilities.h
2course/C++ Homeworks/HW10/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
2course/C++ Homeworks/HW10/metric/: EuclidMetric.cpp  EuclidMetric.h  FrenchMetric.cpp  FrenchMetric.h  Metric.h  MetricName.hpp  TaxicabMetric.cpp  TaxicabMetric.h
2course/C++ Homeworks/HW10/ui/: Message.hpp  main.cpp
2course/C++ Homeworks/HW11/: CMakeLists.txt  StringParseException.cpp  StringParseException.h  main.cpp
2course/C++ Homeworks/HW12/: A_Tree.cpp  B_Permutations.cpp  CMakeLists.txt  C_Queue.cpp  D_Stack.cpp  E_Nth.cpp  F_BinarySearch.cpp  G_TestingSystem.cpp  H_Set.cpp  I_Map.cpp  J_NthMaximum.cpp  K_MoveToBegin.cpp
2course/C++ Homeworks/HW2/: 2_5260335288256823689.pptx  Book.cpp  Book.h  CMakeLists.txt  Student.cpp  Student.h  main.cpp
2course/C++ Homeworks/HW3/: CMakeLists.txt  MakefileBinary  MakefileShared  MakefileStatic  bye.cpp  hello.cpp  here.cpp  main.cpp  main_dynamic  main_static  mylib.h
2course/C++ Homeworks/HW3/lib/: libmylib.so.5.1.10
2course/C++ Homeworks/HW4/rational/: Build.cmd  CMakeLists.txt  Test.cmd
2course/C++ Homeworks/HW4/rational/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest_developer.txt
2course/C++ Homeworks/HW4/rational/_build/Testing/Temporary/: CTestCostData.txt
2course/C++ Homeworks/HW4/rational/_build/lib_rational/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2course/C++ Homeworks/HW4/rational/_build/mylib_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1.txt  test3.txt
2course/C++ Homeworks/HW4/rational/_build/rational_poly/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2course/C++ Homeworks/HW4/rational/installer/include/: RationalNumber.h  RationalPolynom.h
2course/C++ Homeworks/HW4/rational/installer/share/: lib_rational.cmake
2course/C++ Homeworks/HW4/rational/lib_rational/: CMakeLists.txt  RationalNumber.cpp  RationalNumber.h  RationalPolynom.cpp
2course/C++ Homeworks/HW4/rational/mylib_test/: CMakeLists.txt  mylib_test.cpp  test2.txt
2course/C++ Homeworks/HW4/rational/rational_poly/: CMakeLists.txt  rational_poly.cpp
2course/C++ Homeworks/HW4/rational/tests/: CMakeLists.txt
2course/C++ Homeworks/HW5/: CMakeLists.txt  String.cpp  String.h  gen_test.py  main.cpp
2course/C++ Homeworks/HW6/: CMakeLists.txt  Shop.cpp  Shop.h  main.cpp
2course/C++ Homeworks/HW7/: Array.cpp  Array.hpp  CMakeLists.txt  main.cpp
2course/C++ Homeworks/HW8/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  Compare.cpp  ComplexFunction.cpp  IsSameObject.cpp  Man.cpp  Man.h  ManBearPig.cpp  ManBearPig.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h  main.cpp
2course/C++ Homeworks/HW9/: Array.cpp  Array.hpp  CMakeLists.txt  Functions.cpp  Print_values.cpp  To_pair.cpp  main.cpp
2course/Web/HW2/codeforces-layout/: _layout.tar.xz
2course/Web/HW3/: wp3.7z
2course/Web/HW5/wm1/: profile.properties
2course/java-advanced-2019/: .gitignore  MANIFEST.MF  build_ArraySet.sh  build_HelloUDPClient.sh  build_HelloUDPServer.sh  build_Implementor.sh  build_IterativeParallelism.sh  build_JarImplementor.sh  build_Javadoc.sh  build_ParallelMapper.sh  build_RecursiveWalkWalk.sh  build_StudentDB.sh  build_WebCrawler.sh  jar_JarImplementor.sh
Paradigms/ArrayQueue/src/queue/: ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  MyArrayQueueADTTest.java  MyArrayQueueTest.java  Queue.java
Paradigms/Expression/src/expression/: Add.java  And.java  Const.java  ConstExpression.java  Count.java  DoubleExpressionTest.java  ExpressionTest.java  Main.java  Multiply.java  Negate.java  Or.java  Xor.java
Paradigms/MD5/: Shit.txt  input.txt
Paradigms/MD5/src/: CalcMD5.java
(+220 files in other folders)
